<resources>
    <string name="app_name">Quiz App</string>
    <string name="font">fonts/BellotaText-Regular.ttf</string>

    <string name="quiz_swipe_direction">Quiz swipe direction</string>
    <string name="quiz_navigation_direction">Quiz navigation direction</string>
    <string name="background">Background</string>
    <string name="correct">Correct</string>
    <string name="create_new_question">Create new question</string>
    <string name="question">Question</string>
    <string name="first_answer">First Answer</string>
    <string name="second_answer">Second Answer</string>
    <string name="third_answer">Third Answer</string>
    <string name="fourth_answer">Fourth Answer</string>
    <string name="fifth_answer">Fifth Answer</string>
    <string name="add">add</string>
    <string name="create_new_quiz">Create new quiz</string>
    <string name="quiz_name">Quiz name</string>
    <string name="quiz_description">Quiz description</string>
    <string name="question_count_wanted">Question count wanted</string>
    <string name="quiz_result_1_to_100">Quiz result (1 to 100)</string>
    <string name="show_check_answer_during_quiz">Show check answer during quiz</string>
    <string name="update_quiz">Update quiz</string>
    <string name="update">update</string>
    <string name="loading">Loading</string>
    <string name="welcome_to">Welcome to </string>
    <string name="access">Access</string>
    <string name="access_quiz">You can access specific quiz by entering its ID , You can get this ID from quiz instructor : </string>
    <string name="quiz_id">Quiz id</string>
    <string name="previous">Previous</string>
    <string name="check_answer">Check Answer</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="your_score_is">Your score is : </string>
    <string name="great_app_for_your_dynamic_quiz">Great App For your dynamic quiz</string>
    <string name="questions">Questions</string>
    <string name="start_quiz">Start quiz</string>
    <string name="edit_quiz">Edit quiz</string>
    <string name="correct_answer___">Correct answer :</string>
    <string name="students">Students</string>
    <string name="waiting">waiting</string>
    <string name="quiz_time_reach_to_300_minutes">Quiz time (reach to 300 minutes)</string>
    <string name="save_results">Save results</string>
    <string name="show_results">Show results</string>
    <string name="update_question">Update question</string>
    <string name="who_can_access">Who can Access :</string>
    <string name="username">Username</string>
    <string name="wrong_answers">Wrong Answers</string>
    <string name="na">NA</string>
    <string name="correct_answers">Correct answers</string>
    <string name="result">Result</string>
    <string name="your_wrong_answers">Your wrong answers</string>
    <string name="add_new_quiz">Add new quiz</string>
    <string name="you_have_not_added_any_quiz_yet">You have not added any quiz yet</string>
    <string name="my_feedback">My feedback</string>
    <string name="add_new_question">Add new question</string>
    <string name="you_have_not_added_any_questions_yet">You have not added any questions yet</string>
    <string name="finished">Finished</string>
    <string name="remain">Remain</string>
    <string name="success_percentage">Success percentage</string>
    <string name="full_grade">Full grade</string>
    <string name="zero_grade">Zero grade</string>
    <string name="dashboard">Dashboard</string>
    <string name="results">Results</string>
    <string name="you_have_not_been_added_to_any_quiz_yet">You have not been added to any quiz yet</string>
    <string name="edit">Edit</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="quiz_name_comma">Quiz Name ,</string>
    <string name="quiz_time_comma">Quiz Time ,</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="Logout">Logout</string>
</resources>
