<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/background" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/quiz_icon"
                android:contentDescription="@string/background" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontType="@{@string/font}"
                android:text="@string/create_new_quiz"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontType="@{@string/font}"
                android:hint="@string/quiz_name"
                android:inputType="textPersonName"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:autofillHints="@string/quiz_name" />

            <EditText
                android:id="@+id/descriptionEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontType="@{@string/font}"
                android:hint="@string/quiz_description"
                android:inputType="textLongMessage|textMultiLine"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEt"
                android:autofillHints="وصف الامتحان" />

            <EditText
                android:id="@+id/questionsCountEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontType="@{@string/font}"
                android:hint="@string/question_count_wanted"
                android:inputType="number"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEt"
                android:autofillHints="@string/question_count_wanted" />

            <EditText
                android:id="@+id/quizResultGradeEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontType="@{@string/font}"
                android:hint="@string/quiz_result_1_to_100"
                android:inputType="number"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionsCountEt"
                android:autofillHints="@string/quiz_result_1_to_100" />

            <Switch
                android:id="@+id/checkAnswerWorkingSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/show_check_answer_during_quiz"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quizResultGradeEt" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontType="@{@string/font}"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navDirectionSpinner" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submitBtn" />


            <TextView
                android:id="@+id/swipeDirectionSpinnerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/quiz_swipe_direction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkAnswerWorkingSwitch" />


            <Spinner
                android:id="@+id/swipeDirectionSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:prompt="@string/quiz_swipe_direction"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toBottomOf="@+id/swipeDirectionSpinnerTv"
                app:layout_constraintStart_toEndOf="@+id/swipeDirectionSpinnerTv"
                app:layout_constraintTop_toTopOf="@+id/swipeDirectionSpinnerTv" />

            <TextView
                android:id="@+id/navDirectionSpinnerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/quiz_navigation_direction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swipeDirectionSpinnerTv" />

            <Spinner
                android:id="@+id/navDirectionSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:prompt="@string/quiz_navigation_direction"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toBottomOf="@+id/navDirectionSpinnerTv"
                app:layout_constraintStart_toEndOf="@+id/navDirectionSpinnerTv"
                app:layout_constraintTop_toTopOf="@+id/navDirectionSpinnerTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>